--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,30 +8,30 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Regression Suite</th></tr>
-<tr><td><a href="#t0">FirstTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">37</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">SecondtTest</a></td><td class="num">1</td><td class="num attn">2</td><td class="num">0</td><td class="num">27</td><td></td><td></td></tr>
-<tr><td><a href="#t2">ThirdTest</a></td><td class="num">1</td><td class="num attn">2</td><td class="num">0</td><td class="num">28</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num attn">4</th><th class="num">0</th><th class="num">92</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num attn">4</td><td class="num">1,447</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">FirstTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.A</td><td><a href="#m0">testLoginA</a></td><td rowspan="1">1543994158274</td><td rowspan="1">14</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">SecondtTest &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="2">com.uiFrameWork.B</td><td><a href="#m1">testLoginB</a></td><td rowspan="2">1543994158336</td><td rowspan="2">2</td></tr><tr class="skippedeven"><td><a href="#m2">testLoginB</a></td></tr><tr><th colspan="4">SecondtTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.B</td><td><a href="#m3">testLoginB</a></td><td rowspan="1">1543994158342</td><td rowspan="1">3</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">ThirdTest &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="2">com.uiFrameWork.C</td><td><a href="#m4">testLoginC</a></td><td rowspan="2">1543994158383</td><td rowspan="2">7</td></tr><tr class="skippedeven"><td><a href="#m5">testLoginC</a></td></tr><tr><th colspan="4">ThirdTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.C</td><td><a href="#m6">testLoginC</a></td><td rowspan="1">1543994158396</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1</td><td><a href="#m0">testLogin1</a></td><td rowspan="1">1544437870515</td><td rowspan="1">7</td></tr><tr class="failedeven"><td><a href="#m1">testLogin3</a></td><td rowspan="1">1544437870837</td><td rowspan="1">3</td></tr><tr class="failedodd"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2</td><td><a href="#m2">testLogin1</a></td><td rowspan="1">1544437871063</td><td rowspan="1">10</td></tr><tr class="failedodd"><td><a href="#m3">testLogin3</a></td><td rowspan="1">1544437871264</td><td rowspan="1">5</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1</td><td><a href="#m4">testLogin</a></td><td rowspan="1">1544437869971</td><td rowspan="1">42</td></tr><tr class="passedeven"><td><a href="#m5">testLogin2</a></td><td rowspan="1">1544437870696</td><td rowspan="1">3</td></tr><tr class="passedodd"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2</td><td><a href="#m6">testLogin</a></td><td rowspan="1">1544437870970</td><td rowspan="1">3</td></tr><tr class="passedodd"><td><a href="#m7">testLogin2</a></td><td rowspan="1">1544437871165</td><td rowspan="1">6</td></tr></tbody>
 </table>
-<h2>FirstTest</h2><h3 id="m0">com.uiFrameWork.A#testLoginA</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>SecondtTest</h2><h3 id="m1">com.uiFrameWork.B#testLoginB</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.B.testLoginB(B.java:17)
+<h2>Test</h2><h3 id="m0">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
+	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test1.testLogin1(Test1.java:17)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.uiFrameWork.B#testLoginB</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.B.testLoginB(B.java:17)
+<h3 id="m1">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin3</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
+	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test1.testLogin3(Test1.java:27)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.uiFrameWork.B#testLoginB</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>ThirdTest</h2><h3 id="m4">com.uiFrameWork.C#testLoginC</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.C.testLoginC(C.java:16)
+<h3 id="m2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
+	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test2.testLogin1(Test2.java:17)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.uiFrameWork.C#testLoginC</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.C.testLoginC(C.java:16)
+<h3 id="m3">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin3</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
+	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test2.testLogin3(Test2.java:27)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.uiFrameWork.C#testLoginC</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
