--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,30 +8,25 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num attn">4</td><td class="num">1,447</td><td></td><td></td></tr>
+<tr><th colspan="7">Regression Suite</th></tr>
+<tr><td><a href="#t0">A</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">30</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">B</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">16</td><td></td><td></td></tr>
+<tr><td><a href="#t2">C</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">22</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">TestScreenShot</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">12,924</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">2</th><th class="num">12,992</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1</td><td><a href="#m0">testLogin1</a></td><td rowspan="1">1544437870515</td><td rowspan="1">7</td></tr><tr class="failedeven"><td><a href="#m1">testLogin3</a></td><td rowspan="1">1544437870837</td><td rowspan="1">3</td></tr><tr class="failedodd"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2</td><td><a href="#m2">testLogin1</a></td><td rowspan="1">1544437871063</td><td rowspan="1">10</td></tr><tr class="failedodd"><td><a href="#m3">testLogin3</a></td><td rowspan="1">1544437871264</td><td rowspan="1">5</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1</td><td><a href="#m4">testLogin</a></td><td rowspan="1">1544437869971</td><td rowspan="1">42</td></tr><tr class="passedeven"><td><a href="#m5">testLogin2</a></td><td rowspan="1">1544437870696</td><td rowspan="1">3</td></tr><tr class="passedodd"><td rowspan="2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2</td><td><a href="#m6">testLogin</a></td><td rowspan="1">1544437870970</td><td rowspan="1">3</td></tr><tr class="passedodd"><td><a href="#m7">testLogin2</a></td><td rowspan="1">1544437871165</td><td rowspan="1">6</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">A &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.A</td><td><a href="#m0">testLoginA</a></td><td rowspan="1">1544535390900</td><td rowspan="1">8</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">B &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.uiFrameWork.B</td><td><a href="#m1">testLoginB</a></td><td rowspan="1">1544535390943</td><td rowspan="1">3</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">C &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.uiFrameWork.C</td><td><a href="#m2">testLoginC</a></td><td rowspan="1">1544535390975</td><td rowspan="1">13</td></tr></tbody>
+<tbody id="t3"><tr><th colspan="4">TestScreenShot &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot</td><td><a href="#m3">testScreen</a></td><td rowspan="1">1544535395641</td><td rowspan="1">6382</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
-	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test1.testLogin1(Test1.java:17)
+<h2>A</h2><h3 id="m0">com.uiFrameWork.A#testLoginA</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testLoginA Test Started..<br/>testLoginA Test Passed..</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>B</h2><h3 id="m1">com.uiFrameWork.B#testLoginB</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testLoginB Test Started..<br/>testLoginB Test Failed..java.lang.AssertionError: expected [true] but found [false]</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.uiFrameWork.B.testLoginB(B.java:17)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin3</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
-	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test1.testLogin3(Test1.java:27)
+<h2>C</h2><h3 id="m2">com.uiFrameWork.C#testLoginC</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testLoginC Test Started..<br/>testLoginC Test Failed..java.lang.AssertionError: expected [true] but found [false]</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.uiFrameWork.C.testLoginC(C.java:16)
 ... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
-	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test2.testLogin1(Test2.java:17)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin3</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.zone92.projectAutomation.helper.assertion.AssertionHelper.makeFalse(AssertionHelper.java:29)
-	at com.uiFrameWork.zone92.projectAutomation.testScripts.Test2.testLogin3(Test2.java:27)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.uiFrameWork.zone92.projectAutomation.testScripts.Test1#testLogin2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.uiFrameWork.zone92.projectAutomation.testScripts.Test2#testLogin2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestScreenShot</h2><h3 id="m3">com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot#testScreen</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testScreen Test Started..<br/><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_07_06_40.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_07_06_40.png'height='100' width='100'/></a><br/>testScreen Test Passed..</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
