--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,32 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:38</td>   <td>0</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>242</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>18/12/10 15:53:39</td>   <td>262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testLogin()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">testLogin</td> 
-  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>18/12/10 15:53:39</td>   <td>685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testLogin1()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">testLogin1</td> 
-  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>18/12/10 15:53:39</td>   <td>795</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testLogin2()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">testLogin2</td> 
-  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>18/12/10 15:53:39</td>   <td>872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.testLogin3()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">testLogin3</td> 
-  <td>main@1148254374</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/10 15:53:39</td>   <td>890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.Test1@1190200a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1148254374</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:29</td>   <td>0</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:29</td>   <td>127</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:33</td>   <td>4428</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:33</td>   <td>4438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
+<tr bgcolor="97fbdb">  <td>18/12/11 15:30:33</td>   <td>4448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScreenShot.testScreen()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">testScreen</td> 
+  <td>main@124888672</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:50</td>   <td>20800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
 </table>
