--- a/test-output/old/Regression Suite/methods.html
+++ b/test-output/old/Regression Suite/methods.html
@@ -1,18 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Regression Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e9aa96">  <td>18/12/05 12:45:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="A.testLoginA()[pri:0, instance:com.uiFrameWork.A@2fb3536e]">testLoginA</td> 
-  <td>main@1466785259</td>   <td></td> </tr>
-<tr bgcolor="6a70b9">  <td>18/12/05 12:45:58</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="B.testLoginB()[pri:0, instance:com.uiFrameWork.B@54bff557]">testLoginB</td> 
-  <td>main@1466785259</td>   <td></td> </tr>
-<tr bgcolor="6a70b9">  <td>18/12/05 12:45:58</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="B.testLoginB()[pri:0, instance:com.uiFrameWork.B@54bff557]">testLoginB</td> 
-  <td>main@1466785259</td>   <td></td> </tr>
-<tr bgcolor="6a70b9">  <td>18/12/05 12:45:58</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="B.testLoginB()[pri:0, instance:com.uiFrameWork.B@54bff557]">testLoginB</td> 
-  <td>main@1466785259</td>   <td></td> </tr>
-<tr bgcolor="aa63ab">  <td>18/12/05 12:45:58</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="C.testLoginC()[pri:0, instance:com.uiFrameWork.C@2805d709]">testLoginC</td> 
-  <td>main@1466785259</td>   <td></td> </tr>
-<tr bgcolor="aa63ab">  <td>18/12/05 12:45:58</td>   <td>109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="C.testLoginC()[pri:0, instance:com.uiFrameWork.C@2805d709]">testLoginC</td> 
-  <td>main@1466785259</td>   <td></td> </tr>
-<tr bgcolor="aa63ab">  <td>18/12/05 12:45:58</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="C.testLoginC()[pri:0, instance:com.uiFrameWork.C@2805d709]">testLoginC</td> 
-  <td>main@1466785259</td>   <td></td> </tr>
+<tr bgcolor="64f478">  <td>18/12/11 19:06:30</td>   <td>0</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@4efac082]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="af6466">  <td>18/12/11 19:06:30</td>   <td>191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="A.testLoginA()[pri:0, instance:com.uiFrameWork.A@47987356]">testLoginA</td> 
+  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="9aafa1">  <td>18/12/11 19:06:30</td>   <td>234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="B.testLoginB()[pri:0, instance:com.uiFrameWork.B@57cf54e1]">testLoginB</td> 
+  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="a47576">  <td>18/12/11 19:06:30</td>   <td>266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="C.testLoginC()[pri:0, instance:com.uiFrameWork.C@3c7f66c4]">testLoginC</td> 
+  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="64f478">  <td>18/12/11 19:06:31</td>   <td>304</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@4efac082]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="64f478">  <td>18/12/11 19:06:35</td>   <td>4922</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@4efac082]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="64f478">  <td>18/12/11 19:06:35</td>   <td>4925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@4efac082]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="6bcf94">  <td>18/12/11 19:06:35</td>   <td>4931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScreenShot.testScreen()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@4efac082]">testScreen</td> 
+  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="64f478">  <td>18/12/11 19:06:42</td>   <td>11317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@4efac082]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
+<tr bgcolor="64f478">  <td>18/12/11 19:06:42</td>   <td>12074</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@4efac082]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1293241549</td>   <td></td> </tr>
 </table>
