--- a/test-output/old/Regression Suite/reporter-output.html
+++ b/test-output/old/Regression Suite/reporter-output.html
@@ -1,1 +1,18 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>A Class Started..</td></tr>
+<tr><td>testLoginA Test Started..</td></tr>
+<tr><td>testLoginA Test Passed..</td></tr>
+<tr><td>A Test Finished..</td></tr>
+<tr><td>B Class Started..</td></tr>
+<tr><td>testLoginB Test Started..</td></tr>
+<tr><td>testLoginB Test Failed..java.lang.AssertionError: expected [true] but found [false]</td></tr>
+<tr><td>B Test Finished..</td></tr>
+<tr><td>C Class Started..</td></tr>
+<tr><td>testLoginC Test Started..</td></tr>
+<tr><td>testLoginC Test Failed..java.lang.AssertionError: expected [true] but found [false]</td></tr>
+<tr><td>C Test Finished..</td></tr>
+<tr><td>TestScreenShot Class Started..</td></tr>
+<tr><td>testScreen Test Started..</td></tr>
+<tr><td><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_07_06_40.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_07_06_40.png'height='100' width='100'/></a></td></tr>
+<tr><td>testScreen Test Passed..</td></tr>
+<tr><td><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\testScreen_11_12_2018_07_06_42.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\testScreen_11_12_2018_07_06_42.png'height='100' width='100'/></a></td></tr>
+</table>
