chrome open full screen

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,25 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Regression Suite</th></tr>
-<tr><td><a href="#t0">A</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">30</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">B</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">16</td><td></td><td></td></tr>
-<tr><td><a href="#t2">C</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">22</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">TestScreenShot</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">12,924</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">2</th><th class="num">12,992</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">12,325</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Regression Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">A &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.A</td><td><a href="#m0">testLoginA</a></td><td rowspan="1">1544535390900</td><td rowspan="1">8</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">B &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.uiFrameWork.B</td><td><a href="#m1">testLoginB</a></td><td rowspan="1">1544535390943</td><td rowspan="1">3</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">C &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.uiFrameWork.C</td><td><a href="#m2">testLoginC</a></td><td rowspan="1">1544535390975</td><td rowspan="1">13</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">TestScreenShot &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot</td><td><a href="#m3">testScreen</a></td><td rowspan="1">1544535395641</td><td rowspan="1">6382</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot</td><td><a href="#m0">testScreen</a></td><td rowspan="1">1544543426999</td><td rowspan="1">5824</td></tr></tbody>
 </table>
-<h2>A</h2><h3 id="m0">com.uiFrameWork.A#testLoginA</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testLoginA Test Started..<br/>testLoginA Test Passed..</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>B</h2><h3 id="m1">com.uiFrameWork.B#testLoginB</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testLoginB Test Started..<br/>testLoginB Test Failed..java.lang.AssertionError: expected [true] but found [false]</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.B.testLoginB(B.java:17)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>C</h2><h3 id="m2">com.uiFrameWork.C#testLoginC</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testLoginC Test Started..<br/>testLoginC Test Failed..java.lang.AssertionError: expected [true] but found [false]</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.uiFrameWork.C.testLoginC(C.java:16)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>TestScreenShot</h2><h3 id="m3">com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot#testScreen</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">testScreen Test Started..<br/><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_07_06_40.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_07_06_40.png'height='100' width='100'/></a><br/>testScreen Test Passed..</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot#testScreen</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_09_20_31.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_09_20_31.png'height='100' width='100'/></a></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
