--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:29</td>   <td>0</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:29</td>   <td>127</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:33</td>   <td>4428</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:33</td>   <td>4438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
-<tr bgcolor="97fbdb">  <td>18/12/11 15:30:33</td>   <td>4448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScreenShot.testScreen()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">testScreen</td> 
-  <td>main@124888672</td>   <td></td> </tr>
-<tr bgcolor="b4a4bf">  <td>18/12/11 15:30:50</td>   <td>20800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@d5b810e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@124888672</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 21:20:22</td>   <td>0</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@5d0a1059]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@891786282</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 21:20:22</td>   <td>269</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@5d0a1059]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@891786282</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 21:20:26</td>   <td>4812</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeClass()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@5d0a1059]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@891786282</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 21:20:26</td>   <td>4825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.reflect.Method)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@5d0a1059]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@891786282</td>   <td></td> </tr>
+<tr bgcolor="97fbdb">  <td>18/12/11 21:20:26</td>   <td>4832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestScreenShot.testScreen()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@5d0a1059]">testScreen</td> 
+  <td>main@891786282</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 21:20:32</td>   <td>10659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@5d0a1059]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@891786282</td>   <td></td> </tr>
+<tr bgcolor="b4a4bf">  <td>18/12/11 21:20:33</td>   <td>11440</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.uiFrameWork.zone92.projectAutomation.testScripts.TestScreenShot@5d0a1059]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@891786282</td>   <td></td> </tr>
 </table>
