--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,3 @@
-<h2>Reporter output</h2><table><tr><td><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_03_30_40.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_03_30_40.png'height='100' width='100'/></a></td></tr>
+<h2>Reporter output</h2><table><tr><td><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_09_20_31.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\fbSCR_11_12_2018_09_20_31.png'height='100' width='100'/></a></td></tr>
+<tr><td><a href='D:\automationProject\uiFrameWork\src\main\resources\screenShots\testScreen_11_12_2018_09_20_32.png'><img src='D:\automationProject\uiFrameWork\src\main\resources\screenShots\testScreen_11_12_2018_09_20_32.png'height='100' width='100'/></a></td></tr>
 </table>
